--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.0.11",
     "add": "^2.0.6",
     "bootstrap": "4.0.0",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
